# telex

./: .gitattributes  .gitignore  CONTRIBUTING.md  COPILOT.md  Cargo.toml  DECISIONS.md  DESIGN.md  DISPATCH.md  LICENSE  PRODUCT-THESIS.md  README.md  SECURITY.md  SKILL.md  TELEX.md  build.rs  hooks.json  install.ps1  install.sh  plugin.json
.github/plugin/: marketplace.json
.github/workflows/: ci.yml  docs.yml  release.yml
.paw/work/bridge-idle-drain/: WorkflowContext.md
.paw/work/bridge-liveness-hardening/: WorkflowContext.md
.paw/work/cc-stream-wake/: Plan.md  WorkflowContext.md
.paw/work/copilot-plugin/: Plan.md  WorkflowContext.md
.paw/work/daemon-core/: Plan.md  WorkflowContext.md
.paw/work/design-foundation/: Docs.md  Plan.md  WorkflowContext.md
.paw/work/generic-watcher-spike/: Plan.md  WorkflowContext.md
.paw/work/harness-skill-layout/: WorkflowContext.md
.paw/work/liveness-visibility/: Plan.md  WorkflowContext.md
.paw/work/mac-2026-07-09a-88/: CodeResearch.md  Docs.md  ImplementationPlan.md  WorkflowContext.md
.paw/work/mac-2026-07-09a-89/: WorkflowContext.md
.paw/work/mac-2026-07-09a-98/: WorkflowContext.md
.paw/work/macos-daemon-cap-identity/: Plan.md  WorkflowContext.md
.paw/work/operator-loop-spike/: Plan.md  WorkflowContext.md
.paw/work/postgres-parity/: Plan.md  WorkflowContext.md
.paw/work/preserve-copilot-bridge-state-119/: Plan.md  WorkflowContext.md
.paw/work/production-station-contract/: Plan.md  WorkflowContext.md
.paw/work/public-release/: WorkflowContext.md
.paw/work/rb79-20260718-79/: Plan.md  WorkflowContext.md
.paw/work/release-confidence-validation/: Plan.md  WorkflowContext.md
.paw/work/release-upgrade/: Plan.md  WorkflowContext.md
.paw/work/seamless-upgrade/: Plan.md  WorkflowContext.md
.paw/work/telex-tui-inspector/: Plan.md  WorkShaping.md  WorkflowContext.md
.paw/work/tx-2026-06-17a-18/: Docs.md  (+2 more)
.streamliner/: config.json
.streamliner/shaping/: addressable-attention-devbox-handoff.json  addressable-attention-devbox-handoff.md  roadmap.md
copilot/: COPILOT.md
copilot-bridge/: README.md  extension.mjs  peer-prompt.txt  push.mjs
copilot/bridge/: .gitignore  README.md  busy-state.mjs  busy-state.test.mjs  extension.mjs  push.mjs
copilot/plugin/: drain-hook.ps1  drain-hook.sh  hooks.json  plugin.json
docs/: generic-watcher-spike-report.md  operator-loop-spike-report.md
docs/design/: ARCHITECTURE.md  DECISIONS.md  DESIGN.md  copilot-bridge-push.md  copilot-plugin-validation.md  daemon-delivery-budget.toml  daemon.md  index.md  operator-station.md  watcher.md
docs/developing/: releasing.md
docs/guide/: book.toml  generate-reference.sh
docs/notes/: operator-loop-spike-report.md  release-confidence-validation.md
integrations/copilot-cli/: README.md  hooks.json  plugin.json
operator-station-spike/: OPERATOR-AGENT.md  README.md  WALKTHROUGH.md  index.html
operator-station-spike/evidence/: demo-summary.md  demo-transcript.json  return-path-recovery-evidence.json  windows-action-center-record.json
operator-station-spike/harness/: Get-OperatorSpikeStoreFingerprint.ps1  Get-OperatorSpikeToastRecord.ps1  Invoke-OperatorLoopSmoke.ps1  Test-OperatorSpikeStoreFingerprint.ps1
operator-station-spike/src/: App.tsx  model.test.ts  model.ts  types.ts
operator-station-spike/src-tauri/: tauri.conf.json
skills/telex/: SKILL.md
spike/: Cargo.toml  HANDOFF-SESSION-B.md  README.md  _env.ps1  attach.ps1  nowms.ps1  recv.ps1  send.ps1
spike/operator-station/: OPERATOR-AGENT.md  README.md  WALKTHROUGH.md  package-lock.json  package.json
spike/operator-station/evidence/: demo-summary.md  demo-transcript.json  stress-evidence.json  windows-action-center-record.json
spike/operator-station/fixtures/telex-cli/: README.md  ack.json  attach.json  disposition.json  inbox.json  read-full.json  reply.json  station-stop.json  status.json  version.json  wait-delivery.json
spike/operator-station/harness/: .gitignore  Get-OperatorSpikeStoreFingerprint.ps1  Get-OperatorSpikeToastRecord.ps1  Invoke-OperatorLoopSmoke.ps1  Reset-OperatorSpikeLocalScope.ps1
spike/operator-station/src/: App.css  App.test.tsx  App.tsx  model.test.ts  types.ts
spike/operator-station/src-tauri/: Cargo.toml
spike/operator-station/src-tauri/capabilities/: default.json
spike/operator-station/src-tauri/src/: courier.rs  main.rs  toast.rs  tray.rs
spike/src/: backend.rs  lib.rs
src/: cli.rs  config.rs  credential.rs  daemon.rs  daemon_ipc.rs  identity.rs  install.rs  ipc.rs  lib.rs  main.rs  model.rs  output.rs  profiles.rs  registry.rs  release.rs  session_registry.rs  session_watch.rs
src/backend/: mod.rs  postgres.rs  sqlite.rs
src/commands/: address.rs  attach.rs  backend.rs  copilot.rs  daemon.rs  detach.rs  disposition.rs  export.rs  inbox.rs  init.rs  mod.rs  read.rs  reply.rs  send.rs  session_end.rs  skill.rs  station.rs  status.rs  upgrade.rs  wait.rs
telex-console/: Cargo.toml  README.md
telex-console/src/: app.rs  data.rs  event.rs  filter.rs  main.rs  terminal.rs
telex-console/src/ui/: addresses.rs  detail.rs  feed.rs  mod.rs  reader.rs  theme.rs  thread.rs
telex-watcher/: Cargo.toml
telex-watcher/examples/detectors/: README.md
telex-watcher/examples/detectors/fixtures/: azure-devops-pr-neutral.json  azure-devops-pr-ready.json  file-json-ready.json  github-pr-external-activity.json  github-pr-neutral.json  github-pr-ready.json
telex-watcher/examples/detectors/registrations/: azure-devops-pr.json  file-json.json  github-pr-external-activity.json  github-pr.json
telex-watcher/examples/detectors/scripts/: DetectorCommon.psm1  azure-devops-pr-detector.ps1  file-json-detector.ps1  gh-pr-detector.ps1  gh-pr-external-activity-detector.ps1
telex-watcher/examples/detectors/tests/: smoke-detectors.ps1
telex-watcher/src/: adapter.rs  lib.rs  main.rs  protocol.rs  registry.rs
telex-watcher/tests/: behavior.rs  example_detectors_protocol.rs
tests/: conformance.rs  copilot_plugin.rs  daemon_core_postgres.rs  daemon_core_sqlite.rs  daemon_process_sqlite.rs  release_contract.rs  release_upgrade.rs
(+119 files in other folders)
