[package]
name = "telex"
version = "0.1.0"
edition = "2021"
description = "A CLI-first message fabric for AI agent sessions"
license = "MIT"
repository = "https://github.com/lossyrob/telex"
default-run = "telex"

# Keep the throwaway feasibility crate in spike/ out of this package's workspace so
# `cargo build` at the repo root builds only the real telex binary.
[workspace]
exclude = ["spike"]

[[bin]]
name = "telex"
path = "src/main.rs"

[lib]
name = "telex"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync", "signal"] }
tokio-postgres = "0.7"
postgres-native-tls = "0.5"
native-tls = "0.2"
futures-util = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
dirs = "5"

# Vendor OpenSSL on Linux so release binaries are self-contained (native-tls links it).
# Windows uses schannel and macOS uses Security.framework, so neither needs this.
[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
strip = true
lto = "thin"
