[package]
name = "telex"
version = "0.1.0"
edition = "2021"
description = "A CLI-first message fabric for AI agent sessions"
license = "MIT"
repository = "https://github.com/lossyrob/telex"
default-run = "telex"

# Keep the throwaway feasibility crate in spike/ out of this package's workspace so
# `cargo build` at the repo root builds only the real telex binary.
[workspace]
members = ["telex-console"]
exclude = ["spike"]

[[bin]]
name = "telex"
path = "src/main.rs"

[lib]
name = "telex"
path = "src/lib.rs"

[dependencies]
# Core (always compiled)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync", "signal", "process"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
dirs = "5"

# SQLite backend (feature: sqlite)
rusqlite = { version = "0.32", features = ["bundled"], optional = true }

# Postgres backend (feature: postgres)
tokio-postgres = { version = "0.7", optional = true }
postgres-native-tls = { version = "0.5", optional = true }
native-tls = { version = "0.2", optional = true }
futures-util = { version = "0.3", optional = true }

# Entra auth for Postgres (feature: entra) — the GA Azure SDK.
azure_identity = { version = "1", optional = true }
azure_core = { version = "1", optional = true }

# Vendor OpenSSL on Linux only when the Postgres backend (native-tls) is enabled, so
# Linux release builds are self-contained. Windows uses schannel, macOS Security.framework.
[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"], optional = true }

[features]
# Batteries-included default. Build a leaner binary with e.g.
#   cargo install telex --no-default-features --features sqlite
default = ["sqlite", "postgres"]
sqlite = ["dep:rusqlite"]
postgres = ["dep:tokio-postgres", "dep:postgres-native-tls", "dep:native-tls", "dep:futures-util", "dep:openssl"]
entra = ["postgres", "dep:azure_identity", "dep:azure_core"]

[profile.release]
strip = true
lto = "thin"
