[package]
name = "telex-spike"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync"] }
tokio-postgres = "0.7"
postgres-native-tls = "0.5"
native-tls = "0.2"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }

[[bin]]
name = "initdb"
path = "src/bin/initdb.rs"

[[bin]]
name = "holder"
path = "src/bin/holder.rs"

[[bin]]
name = "waiter"
path = "src/bin/waiter.rs"

[[bin]]
name = "sender"
path = "src/bin/sender.rs"

[[bin]]
name = "liveness"
path = "src/bin/liveness.rs"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"
