[package]
name = "telex-console"
version = "0.1.0"
edition = "2021"
description = "Read-only, live-tailing terminal UI for inspecting a Telex message fabric"
license = "MIT"
repository = "https://github.com/lossyrob/telex"

[[bin]]
name = "telex-console"
path = "src/main.rs"

[dependencies]
# Core telex library (in-process Backend access). Default features bring sqlite+postgres.
telex = { path = ".." }
ratatui = "0.29"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
serde_json = "1"

[features]
# Allow inspecting Entra-authenticated Postgres backends by enabling the core's entra path.
entra = ["telex/entra"]
