[package]
name = "operator-station-spike"
version = "0.1.0"
edition = "2021"
description = "Spike-only Telex operator Station runtime"

[workspace]
resolver = "2"

[[bin]]
name = "operator-station-spike"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tokio = { version = "1", features = ["io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1", features = ["v4"] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Data_Xml_Dom",
  "UI_Notifications",
  "Win32_UI_Shell",
] }
winreg = "0.52"
